@@ -1,5 +1,9 @@
 2009-01-19  Ray Strode  <rstrode@redhat.com>
 
+	* gnome-bg.c (gnome_bg_set_pixmap_as_root): Add docstring for gnome_bg_set_pixmap_as_root
+
+2009-01-19  Ray Strode  <rstrode@redhat.com>
+
 	Add Crossfade class
 
 	* gnome-bg-crossfade.[ch]: New files
